--- a/views/payment.pug
+++ b/views/payment.pug
@@ -2,10 +2,10 @@ doctype html
 head
   meta(charset='UTF-8')
   meta(name='viewport' content='width=device-width, initial-scale=1.0')
-  title Time and Payments Form
+  title Payments Form
   link(rel='stylesheet' href='/css/pay.css')
 .container
-  h2 Time and Payments Form
+  h2  Payments Form
   form#paymentform(action='/payment' method='POST')
     label(for='date') Date:
     input#date(type='date' name='date' )
