--- a/public/css/expe.css
+++ b/public/css/expe.css
@@ -59,3 +59,9 @@ margin-right: 10px;
 margin-top: 20px;
 font-weight: bold;
 }
+.error {
+    display: none;
+    color: #8800C7;
+    font-size: 0.9em;
+    margin-top: 5px;
+  } 
