--- a/public/css/style.css
+++ b/public/css/style.css
@@ -52,9 +52,10 @@ body {
 
   .error {
     display: none;
-    color: red;
+    color: #8800C7;
     font-size: 0.9em;
     margin-left: 10px;
+    margin-top: 2px;
   }
 
   
